sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: not found: value break
    if (!swapped) {break()}
                   ^AlgCocktailSort3:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if (!swapped) {return 0}
                          ^AlgCocktailSort3:26: warning: enclosing method cocktailSort3 has result type Unit: return value discarded
    if (!swapped) {return 0}
                   ^