sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  
  var swapped= false
  var c:Int=getValueCount()-2
  var beg:Int=0
  do {
    
    swapped=false;
    for (i<-beg to c){
      if (!isSmaller(i,i+1)) {
        swap(i,i+1);
        swapped= true      
      }      
    }
    if (!swapped) {break()}
    c-=1
    for (i<-c to beg by (-1)){
       if (!isSmaller(i,i+1)) {
      swap(i+1,i)
      swapped= true      
      }
    }
    
    beg+=1
    if (!swapped) {return 0}
    
    
    
    
  }while (swapped);
  
}